samples/_failures_safe/1761393549_e40ba1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a18b3604.c:145: error: expected ‘;’, ‘,’ or ‘)’ at end of input
